# cargo-snippet

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: config.rs  fsutil.rs  lib.rs  main.rs  parser.rs  snippet.rs  util.rs  writer.rs
