[package]
name = "cargo-snippet"
version = "0.2.6"
authors = ["hatoo <hato2000@gmail.com>"]
repository = "https://github.com/hatoo/cargo-snippet.git"
keywords = ["subcommand", "cargo-subcommand", "cargo", "snippet", "competitive"]
license = "MIT"
readme = "README.md"
description = "A snippet extractor for competitive programmers"
categories = ["template-engine"]
edition = "2018"

[lib]
plugin = true
path = "src/lib.rs"

[[bin]]
name = "cargo-snippet"
path = "src/main.rs"
required-features = ["binaries"]

[dependencies]
syn = { version = "0.15", features = ["full", "parsing", "extra-traits", "printing"], optional = true }
quote = { version = "0.6", optional = true }
rustfmt-nightly = { version = "1", optional = true }
glob = { version = "0.2", optional = true }
clap = { version = "2.29", optional = true }
serde = { version = "1.0", optional = true}
serde_derive = { version = "1.0", optional = true}
serde_json = { version = "1.0", optional = true}
log = { version= "0.4", optional = true }
env_logger = { version= "0.6", optional = true }

[features]
binaries = ["syn", "quote", "rustfmt-nightly", "glob", "clap", "serde", "serde_derive", "serde_json", "log", "env_logger"]